feat: fix header row in catalog table

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head> 
 
-  <title>Trainer 0.1</title> 
+  <title>Trainer</title> 
 
   <meta charset="utf-8"> 
 
@@ -49,7 +49,7 @@
     3. Save the current status by dowloading the file trainer.json                 <br>
   </p>
   <input type="file" id="getFile" accept="application/json" style="display:none"> 
-  <script src="./dist/trainer.js"></script> 
+  <script src="../ts/dist/trainer.js"></script> 
 </body> 
   
 </html> 
