--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     <h2>
       How it is done
     </h2>
-    1. Get questions and answers from file trainer.json .                          <br>
-    2. Do the training. Step through the questions by hitting the <Enter> key.     <br>
-    3. Save the current status by dowloading the file trainer.json                 <br>
+    1. Get questions and answers from file ./assets/trainer.json .                                                                       <br>
+    2. Do the training. Step through the questions by hitting the <Enter> key.                                                           <br>
+    3. Save the current status by dowloading the file trainer.json. It may be used as input for step 1. for the next run                 <br>
   </p>
   <input type="file" id="getFile" accept="application/json" style="display:none"> 
-  <script src="../ts/dist/trainer.js"></script> 
+  <script src="../dist/trainer.js"></script> 
 </body> 
   
 </html> 
