fix: wip source path

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body> 
   <center> 
     <h1> 
-      Trainer 
+      Trainer 0.1 
     </h1> 
   </center> 
   <p>
@@ -49,7 +49,7 @@
     3. Save the current status by dowloading the file trainer.json. It may be used as input for step 1. for the next run                 <br>
   </p>
   <input type="file" id="getFile" accept="application/json" style="display:none"> 
-  <script src="../dist/trainer.js"></script> 
+  <script src="./dist/trainer.js"></script> 
 </body> 
   
 </html> 
