fix: wip fix table header

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       How it is done
     </h2>
     1. Get questions and answers from file ./assets/trainer.json .                                                                       <br>
-    2. Do the training. Step through the questions by hitting the <Enter> key.                                                           <br>
+    2. Do the training. Step through the questions by hitting the &lt;Enter&gt; key.                                                           <br>
     3. Save the current status by dowloading the file trainer.json. It may be used as input for step 1. for the next run                 <br>
   </p>
   <input type="file" id="getFile" accept="application/json" style="display:none"> 
